Remove loading/unloading of plugins after startup (#566)